# mcy

./: COPYING  Makefile  README.md  mcy-dash.py  mcy-gen.py  mcy.py
.github/workflows/: codeql.yml
dash/static/js/: highlight.pack.js
dash/templates/: chart_section.html  footer.html  header.html  index.html  mutations.html  settings.html  sidebar.html  source.html
docs/source/: cmds.rst  conf.diff  conf.py  config.rst  eqsetup.rst  index.rst  methodology.rst  mutate.rst  quickstart.rst  testsetup.rst  tutorial.rst
docs/source/_static/: yosyshq.css
docs/source/_static/css/: yosyshq.css
docs/source/_templates/: page.html
docs/static/: custom.css
example/: .gitignore  config.mcy  eq_bmc.sby  eq_bmc.sh  eq_sim3.sby  eq_sim3.sh  sim_simple.hex  sim_simple.sh  sim_simple.v
examples/SQED_ridecore/: .gitignore  README.md  config.mcy  fm_btor.sby  fm_btor.sh  fm_smtbmc.sby  fm_smtbmc.sh  gen_ilang.ys  test_eq.sby  test_eq.sh  test_eq.sv  test_fm.sv
examples/SQED_ridecore/rtl/design/: alu.v  arf.v  dmem.v  exunit_alu.v  exunit_branch.v  exunit_mul.v  imm_gen.v  pipeline.v  pipeline_if.v  ram_sync_nolatch.v  reorderbuf.v  rs_mul.v  top_ridecore.v
examples/SQED_ridecore/rtl/qed_files/: inst_constraints.v  modify_instruction.v  properties.v  qed.v  qed_decoder.v  qed_i_cache.v  qed_instruction_mux.v
examples/bitcnt/: .gitignore  bitcnt.v  bitcnt_tb.v  config.mcy  test_eq.sby  test_eq.sh  test_eq.sv  test_fm.sby  test_fm.sh  test_fm.sv  test_sim.sh
examples/picorv32_primes/: .gitignore  eq_bmc.sby  eq_bmc.sh  eq_sim3.sby  eq_sim3.sh  miter.sv  picorv32.v  sim_simple.sh  sim_simple.v
generators/: iverilog.py
gui/: .gitignore  CMakeLists.txt  README.md
gui-create/: .gitignore  CMakeLists.txt
gui-create/src/: CMakeLists.txt  addtest.cc  addtest.h  createwizard.cc  createwizard.h  designsetup.cc  designsetup.h  intropage.cc  intropage.h  main.cc  selectdir.cc  selectdir.h  testsetup.cc  testsetup.h
gui/src/: CMakeLists.txt  base.qrc  browserwidget.cc  browserwidget.h  codeview.cc  codeview.h  database.cc  database.h  finddialog.cc  finddialog.h  main.cc  mainwindow.cc  mainwindow.h
scripts/: create_mutated.sh
